--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <section class="container">
-            <img src="Skærmbillede 2023-11-27 kl. 11.08.54.png" alt="Rutshe"></div>
+            <img src="Skærmbillede 2023-11-27 kl. 11.08.54.png" alt="Rutsheane"></div>
             <img src="Skærmbillede 2023-11-27 kl. 11.09.06.png" alt="Bakken"></div>
             <img src="Skærmbillede 2023-11-27 kl. 11.09.29.png" alt="Christian"></div>
 
